@@ -12,6 +12,7 @@
 -- added --warn-flowbits
 -- tweaked flowbits counts start up output
 -- updates to snort.lua and snort_defaults.lua
+-- fixed stream_icmp counts
 
 123
 -- refactored documentation
